--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -1,5 +1,5 @@
 <div class="min-h-screen flex flex-col bg-gray-50">
-  <app-header></app-header>
+  <app-header class="sticky top-0"></app-header>
 
   <main class="flex-1 p-6">
     <!-- main app pages render here -->
