--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,8 @@
 .animate-slideDown {
     animation: slideDown 0.3s ease-out;
 }
+
+body::-webkit-scrollbar {
+    display: none;
+    /* Hides the scrollbar */
+}
