--- a/src/app/features/contacts/pages/contacts-list/contacts-list.component.html
+++ b/src/app/features/contacts/pages/contacts-list/contacts-list.component.html
@@ -15,6 +15,7 @@
 
       <a
         routerLink="/contacts/new"
+        *ngIf="roleService.isEditor()"
         class="inline-flex items-center bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-xl shadow transition"
       >
         <svg
@@ -83,7 +84,7 @@
                 </span>
               </div>
             </td>
-            <td class="px-6 py-4 text-right">
+            <td class="px-6 py-4 text-right" *ngIf="roleService.isEditor()">
               <a
                 [routerLink]="['/contacts/edit', contact._id]"
                 class="inline-block bg-green-700 text-green-50 px-4 py-1.5 rounded-lg hover:bg-green-600 mx-1"
@@ -95,6 +96,12 @@
               >
                 Delete
               </button>
+            </td>
+            <td
+              class="px-6 py-4 text-right text-blue-950"
+              *ngIf="roleService.isViewer()"
+            >
+              View Only
             </td>
           </tr>
         </tbody>
@@ -134,9 +141,7 @@
     class="fixed inset-0 z-50 flex items-center justify-center bg-black/40"
   >
     <div class="bg-white w-full max-w-sm rounded-2xl shadow p-6">
-      <h3 class="text-lg font-semibold text-gray-800 mb-2">
-        Delete contact?
-      </h3>
+      <h3 class="text-lg font-semibold text-gray-800 mb-2">Delete contact?</h3>
       <p class="text-gray-600 mb-4">
         This action cannot be undone. Delete
         <span class="font-medium">{{ contactToDelete?.name }}</span
