message-template module created but role based is remaining

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -25,8 +25,8 @@
       <a routerLink="/contacts" class="text-gray-700 hover:text-indigo-600"
         >Contacts</a
       >
-      <a routerLink="/analytics" class="text-gray-700 hover:text-indigo-600"
-        >Analytics</a
+      <a routerLink="/message-templates" class="text-gray-700 hover:text-indigo-600"
+        >message-templates</a
       >
 
       <!-- Workspace Selector Dropdown -->
