--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -26,7 +26,7 @@
         >Contacts</a
       >
       <a routerLink="/message-templates" class="text-gray-700 hover:text-indigo-600"
-        >message-templates</a
+        >Message-templates</a
       >
 
       <!-- Workspace Selector Dropdown -->
