Campaign launch is created

--- a/src/app/features/campaigns/pages/list/list.component.html
+++ b/src/app/features/campaigns/pages/list/list.component.html
@@ -44,7 +44,7 @@
           </div>
           
           <div class="flex items-center gap-1">
-            <a [routerLink]="['/campaigns/details', c._id]" title="View" class="p-2 text-slate-500 hover:bg-slate-200 rounded-full transition-colors">
+            <a [routerLink]="['/campaigns/', c._id]" title="View" class="p-2 text-slate-500 hover:bg-slate-200 rounded-full transition-colors">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639l4.43-4.43a1.012 1.012 0 0 1 1.414 0l4.43 4.43a1.012 1.012 0 0 1 0 .639l-4.43 4.43a1.012 1.012 0 0 1-1.414 0l-4.43-4.43Z" />
                 <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
