--- a/src/app/features/campaigns/pages/list/list.component.html
+++ b/src/app/features/campaigns/pages/list/list.component.html
@@ -34,7 +34,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         <div
           *ngFor="let c of campaigns"
-          class="bg-white rounded-xl shadow-sm border border-slate-200 flex flex-col transition-all hover:shadow-lg hover:-translate-y-1"
+          class="bg-white rounded-xl shadow-sm border border-slate-200 flex flex-col transition-all"
         >
           <div
             class="p-4 flex justify-between items-start border-b border-slate-100"
@@ -118,6 +118,7 @@
                 </svg>
               </a>
 
+              <!-- (click)="onEdit(c._id)" -->
               <ng-container *ngIf="roleService.isEditor()">
                 <a
                   *ngIf="c.status === 'Draft'"
