dashboard component added

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -19,6 +19,12 @@
         class="text-gray-700 hover:text-indigo-600"
         >Home</a
       >
+      <a
+        routerLink="/dashboard"
+        routerLinkActive="text-indigo-600 font-semibold"
+        class="text-gray-700 hover:text-indigo-600"
+        >Dashboard</a
+      >
       <a routerLink="/campaigns" class="text-gray-700 hover:text-indigo-600"
         >Campaigns</a
       >
