nav link modify

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -13,25 +13,34 @@
 
     <!-- Desktop Nav -->
     <nav class="hidden md:flex items-center space-x-6">
-      <a
+      <!-- <a
         routerLink="/home"
         routerLinkActive="text-indigo-600 font-semibold"
         class="text-gray-700 hover:text-indigo-600"
         >Home</a
-      >
+      > -->
       <a
         routerLink="/dashboard"
         routerLinkActive="text-indigo-600 font-semibold"
         class="text-gray-700 hover:text-indigo-600"
         >Dashboard</a
       >
-      <a routerLink="/campaigns" class="text-gray-700 hover:text-indigo-600"
+      <a
+        routerLink="/campaigns"
+        class="text-gray-700 hover:text-indigo-600"
+        routerLinkActive="text-indigo-600 font-semibold"
         >Campaigns</a
       >
-      <a routerLink="/contacts" class="text-gray-700 hover:text-indigo-600"
+      <a
+        routerLink="/contacts"
+        class="text-gray-700 hover:text-indigo-600"
+        routerLinkActive="text-indigo-600 font-semibold"
         >Contacts</a
       >
-      <a routerLink="/message-templates" class="text-gray-700 hover:text-indigo-600"
+      <a
+        routerLink="/message-templates"
+        class="text-gray-700 hover:text-indigo-600"
+        routerLinkActive="text-indigo-600 font-semibold"
         >Message-templates</a
       >
 
